--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "bufferutil": "^2.0.0",
+    "cheerio": "^0.22.0",
     "discord.js": "^11.0.0",
     "erlpack": "git://github.com/hammerandchisel/erlpack.git#b3c9a6769b347299eb2eed10738c0b3b6cb96cb7",
     "lodash": "^4.17.4",
