--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "cheerio": "^0.22.0",
     "discord.js": "^11.2.1",
     "erlpack": "git://github.com/hammerandchisel/erlpack.git#b3c9a6769b347299eb2eed10738c0b3b6cb96cb7",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.15",
     "mersenne-twister": "^1.1.0",
     "node-opus": "^0.2.4",
+    "node-schedule": "^1.3.2",
     "opusscript": "0.0.2",
-    "request": "^2.79.0",
+    "request": "^2.88.0",
     "request-promise": "^4.1.1",
     "uws": "^0.12.0"
   },
